--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -4429,12 +4429,20 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
+.p-dock .p-dock-list-container .p-dock-list {
+  outline: none;
+}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
+}
+.p-dock .p-dock-action.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4653,14 +4661,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
-}
-.p-menu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-menu .p-menuitem-link.p-focus {
-  color: #212529;
-  background: #dee2e6;
 }
 .p-menu.p-menu-overlay {
   background: #ffffff;
@@ -5164,24 +5164,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
-  background: #883cae;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
-  color: #ffffff;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
-  background: #703290;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
-  color: #212529;
-  background: #dee2e6;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
