--- a/public/themes/luna-blue/theme.css
+++ b/public/themes/luna-blue/theme.css
@@ -4404,12 +4404,20 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
+.p-dock .p-dock-list-container .p-dock-list {
+  outline: none;
+}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
+}
+.p-dock .p-dock-action.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 0.15rem white;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4628,14 +4636,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem white;
-}
-.p-menu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-menu .p-menuitem-link.p-focus {
-  color: #dedede;
-  background: #3c3c3c;
 }
 .p-menu.p-menu-overlay {
   background: #252525;
@@ -5115,24 +5115,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem white;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
-  background: #81D4FA;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
-  color: #212529;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
-  background: #81d4fa;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
-  color: #dedede;
-  background: #3c3c3c;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #252525;
