--- a/public/themes/md-dark-deeppurple/theme.css
+++ b/public/themes/md-dark-deeppurple/theme.css
@@ -4441,12 +4441,20 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
+.p-dock .p-dock-list-container .p-dock-list {
+  outline: none;
+}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
+}
+.p-dock .p-dock-action.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: none;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4665,14 +4673,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: none;
-}
-.p-menu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-menu .p-menuitem-link.p-focus {
-  color: rgba(255, 255, 255, 0.87);
-  background: rgba(255, 255, 255, 0.12);
 }
 .p-menu.p-menu-overlay {
   background: #2b2b2b;
@@ -5176,24 +5176,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
-  background: rgba(206, 147, 216, 0.16);
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
-  color: #CE93D8;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
-  background: rgba(206, 147, 216, 0.24);
-}
-.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
-  color: rgba(255, 255, 255, 0.87);
-  background: rgba(255, 255, 255, 0.12);
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #2b2b2b;
