--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -4392,12 +4392,20 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
+.p-dock .p-dock-list-container .p-dock-list {
+  outline: none;
+}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
+}
+.p-dock .p-dock-action.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 0.15rem #e4e9ec;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4616,14 +4624,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #e4e9ec;
-}
-.p-menu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-menu .p-menuitem-link.p-focus {
-  color: #666666;
-  background: #e0e0e0;
 }
 .p-menu.p-menu-overlay {
   background: #ffffff;
@@ -5103,24 +5103,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #e4e9ec;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
-  background: #AFD3C8;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
-  color: #385048;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
-  background: #aed3c7;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
-  color: #666666;
-  background: #e0e0e0;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
