--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -4452,12 +4452,20 @@
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
+.p-dock .p-dock-list-container .p-dock-list {
+  outline: none;
+}
 .p-dock .p-dock-item {
   padding: 0.5rem;
 }
 .p-dock .p-dock-action {
   width: 4rem;
   height: 4rem;
+}
+.p-dock .p-dock-action.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 0.15rem #6366F1;
 }
 .p-dock.p-dock-top .p-dock-item-second-prev,
 .p-dock.p-dock-top .p-dock-item-second-next, .p-dock.p-dock-bottom .p-dock-item-second-prev,
@@ -4676,14 +4684,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #6366F1;
-}
-.p-menu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-menu .p-menuitem-link.p-focus {
-  color: #18181B;
-  background: #e5e7eb;
 }
 .p-menu.p-menu-overlay {
   background: #ffffff;
@@ -5187,24 +5187,6 @@
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #6366F1;
-}
-.p-tieredmenu .p-menuitem-link:focus {
-  outline: none;
-  box-shadow: none;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) {
-  background: #EEF2FF;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-text,
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled) .p-menuitem-icon {
-  color: #312E81;
-}
-.p-tieredmenu .p-menuitem-link.p-highlight:not(.p-disabled).p-focus {
-  background: #E0E7FF;
-}
-.p-tieredmenu .p-menuitem-link:not(.p-highlight):not(.p-disabled).p-focus {
-  color: #18181B;
-  background: #e5e7eb;
 }
 .p-tieredmenu.p-tieredmenu-overlay {
   background: #ffffff;
