--- a/src/assets/styles/app/_core.scss
+++ b/src/assets/styles/app/_core.scss
@@ -91,7 +91,7 @@ pre[class*="language-"] {
 
     &:before, &:after {
         display: none !important;
-    } 
+    }
 
     code {
         border-left: 10px solid var(--surface-border) !important;
@@ -99,26 +99,27 @@ pre[class*="language-"] {
         background: var(--surface-card) !important;
         color: var(--text-color);
         font-size: 14px;
-    
+        z-index: 0 !important;
+
         .token {
             &.tag,
             &.keyword {
                 color: #2196F3 !important;
             }
-    
+
             &.attr-name,
             &.attr-string {
                 color: #2196F3 !important;
             }
-    
+
             &.attr-value {
                 color: #4CAF50 !important;
             }
-    
+
             &.punctuation {
                 color: var(--text-color);
             }
-    
+
             &.operator,
             &.string {
                 background: transparent;
